# callme

./: .gitignore  CMakeFlags.cmake  CMakeLists.txt  CMakeSettings.json  Event.sln  LICENSE  LICENSE-3RD-PARTY  clean.py  readme.md
.github/workflows/: cmake.yml
Benchmark/: Benchmark.vcxproj  Benchmark.vcxproj.filters  CMakeLists.txt  Stopwatch.h  bitwizeshift.h  clang.txt  gcc.txt  main.cpp  msvc.txt  pch.h  readme.md
Impl/: CallMe.Event.h  CallMe.h  Impl.vcxitems  small_vector.h
UnitTests/: APIErrorsTests.cpp  CMakeLists.txt  UnitTests.vcxproj  UnitTests.vcxproj.filters  delegateTests.cpp  doctest.h  eventTests.cpp  testutil.h
pretty/: CMakeLists.txt  pretty-impl.ixx  pretty.cpp  pretty.filters  pretty.h  pretty.ixx  pretty.vcxproj  unicode.ixx
